# 3d_line_detection

./: CMakeLists.txt  LICENSE  Makefile  README.md
data/: test_cloud.pcd
dockerfiles/: ubuntu2004.dockerfile
examples/: CMakeLists.txt  DrawSphereApp.cpp  LineDetectionApp.cpp  Timer.hpp  Utility.hpp
include/3d_line_detection/: 3d_line_detection.hpp  HoughTransform.hpp  LineSegment3D.hpp  Sphere.hpp
include/3d_line_detection/impl/: HoughTransform.ipp  LineSegment3D.ipp
scripts/: install_dependencies.bash
src/: CMakeLists.txt  Sphere.cpp
